--- a/CampHog/index.html
+++ b/CampHog/index.html
@@ -1,19 +1,9 @@
 ---
-title: Home
+title: Recent Posts
 ---
-
-<h2>Welcome</h2>
-
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
-
-<p>Welcome to my blog!</p>
-
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
-
-<h2>Posts</h2>
 
 <ul>
     $posts$
 </ul>
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.
+<p><a href="/archive.html">All</a> posts.
