Update to v4 of hakyll. Set config providerDirectory option.

--- a/CampHog/index.html
+++ b/CampHog/index.html
@@ -3,7 +3,7 @@ title: Recent Posts
 ---
 
 <ul>
-    $posts$
+    $partial("templates/post-list.html")$
 </ul>
 
 <p><a href="/archive.html">All</a> posts.
