Publish changes to font, nav and byline.

--- a/b/index.html
+++ b/b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>BlockScope - About @blockscope</title>
+        <title>BlockScope - @blockscope</title>
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
@@ -10,32 +10,27 @@
             <div class="row">
                 <div id="side" class="col-4 card">
                     <div class="card-body">
-    <h1 class="card-title"><a href="../">Block Scope</a></h1>
-<p class="card-text">Software development consultancy</p>
+    <h1 class="card-title"><a href="../">{Block Scope}</a></h1>
+<p class="card-text">with curlies but I prefer indents</p>
 
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link active" href="../b">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../archive.html">Blog</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="../archive.html">blog</a></li>
+            <li class="nav-item"><a class="nav-link active" href="../b">@blockscope</a></li>
+            <li class="nav-item"><a class="nav-link active" href="../p">@philderbeast</a></li>
         </ul>
     </nav>
-    <div class="small text-muted">&copy; 2013-2018 Block Scope</div>
-
 </div>
 
                 </div>
                 <div class="col-6">
                     <article>
 <header>
-    <h1>About @blockscope</h1>
+    <h1>@blockscope</h1>
 </header>
     
     <p>Incorported in 2003 as a New Zealand registered company.</p>
-<p>Services we provide;</p>
+<p>If you’re interested in working together, these are the kinds of services I can provide.</p>
 <ul>
 <li>Getting setup for software development.</li>
 <li>Ensuring quality; testing what works now and discovering new failures.</li>
@@ -44,16 +39,12 @@
 <li>Contributing fixes, raising, commenting on and triaging issues.</li>
 <li>Automating builds and deployments.</li>
 </ul>
-<p>Who we are;</p>
-<ul>
-<li><a href="../p">Phil de Joux</a></li>
-</ul>
 </article>
 
                     <hr />
                     <footer>
                         <div class="row">
-<div class="col-5">
+<div class="col-6">
 <address>
   <strong>Block Scope Limited</strong><br />
   638C Woodfields Rd<br />
@@ -62,13 +53,11 @@
   NEW ZEALAND<br />
 </address>
 </div> 
-<div class="col-5">
-<address>
-  <i class="fa fa-envelope"></i><a href="mailto:info@blockscope.com"> info@blockscope.com</a><br />
-  <i class="fa fa-phone"></i> +1-450-675-9180<br />
-</address>
-</div> 
-<div class="col-2">
+<div class="col-6">
+  <address>
+    <i class="fa fa-envelope"></i><a href="mailto:info@blockscope.com"> info@blockscope.com</a><br />
+    <i class="fa fa-phone"></i> +1-450-675-9180<br />
+  </address>
   <i class="fa fa-github"></i>
   <a href="https://github.com/blockscope" target="_blank">github</a><br />
 </div>
