--- a/p/index.html
+++ b/p/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>BlockScope - About @philderbeast</title>
+        <title>BlockScope - @philderbeast</title>
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
@@ -10,28 +10,23 @@
             <div class="row">
                 <div id="side" class="col-4 card">
                     <div class="card-body">
-    <h1 class="card-title"><a href="../">Block Scope</a></h1>
-<p class="card-text">Software development consultancy</p>
+    <h1 class="card-title"><a href="../">{Block Scope}</a></h1>
+<p class="card-text">with curlies but I prefer indents</p>
 
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link active" href="../b">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../archive.html">Blog</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="../archive.html">blog</a></li>
+            <li class="nav-item"><a class="nav-link active" href="../b">@blockscope</a></li>
+            <li class="nav-item"><a class="nav-link active" href="../p">@philderbeast</a></li>
         </ul>
     </nav>
-    <div class="small text-muted">&copy; 2013-2018 Block Scope</div>
-
 </div>
 
                 </div>
                 <div class="col-6">
                     <article>
 <header>
-    <h1>About @philderbeast</h1>
+    <h1>@philderbeast</h1>
 </header>
     
     <p>I develop software and climb, unfortunately doing only one of these activities professionally.</p>
@@ -42,7 +37,7 @@
                     <hr />
                     <footer>
                         <div class="row">
-<div class="col-4">
+<div class="col-6">
 <address>
   <strong>Phil de Joux</strong><br />
   1425 chemin de la Rivière<br />
@@ -51,14 +46,12 @@
   CANADA<br />
 </address>
 </div> 
-<div class="col-5">
-<address>
-  <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br />
-  <i class="fa fa-phone"></i> +1-450-675-9180<br />
-  <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br />
-</address>
-</div> 
-<div class="col-3">
+<div class="col-6">
+  <address>
+    <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br />
+    <i class="fa fa-phone"></i> +1-450-675-9180<br />
+    <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br />
+  </address>
   <i class="fa fa-github"></i>
   <a href="https://github.com/philderbeast" target="_blank">github</a><br />
   <i style="color:#1da1f2" class="fa fa-twitter"></i>
