Publish addition of CV and tweets.

--- a/p/index.html
+++ b/p/index.html
@@ -2,36 +2,50 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>BlockScope - @philderbeast</title>
+        <title>About @philderbeast</title>
         <link rel="stylesheet" href="../css/styles.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+<link rel="manifest" href="../site.webmanifest">
+<link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
     </head>
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div id="side" class="col-4 card">
+                <div id="side" class="col-3 card">
                     <div class="card-body">
-    <h1 class="card-title"><a href="../">{Block Scope}</a></h1>
-<p class="card-text">with curlies but I prefer indents</p>
+    <h1 class="card-title"><a href="../">{...}</a></h1>
 
     <nav>
         <ul class="nav flex-column">
             <li class="nav-item"><a class="nav-link" href="../archive.html">blog</a></li>
-            <li class="nav-item"><a class="nav-link active" href="../b">@blockscope</a></li>
-            <li class="nav-item"><a class="nav-link active" href="../p">@philderbeast</a></li>
+            <li class="nav-item"><a class="nav-link" href="../tweet">tweet</a></li>
+            <li class="nav-item"><a class="nav-link" href="../p">@philderbeast</a></li>
+            <li class="nav-item"><a class="nav-link" href="../cv">cv</a></li>
+            <li class="nav-item"><a class="nav-link" href="../b">@blockscope</a></li>
         </ul>
     </nav>
 </div>
 
                 </div>
-                <div class="col-6">
+                <div class="col-9">
                     <article>
 <header>
     <h1>@philderbeast</h1>
 </header>
     
-    <p>I develop software and climb, unfortunately doing only one of these activities professionally.</p>
-<p>When choosing a company name, I went with <a href="../posts/2018-04-29-block-scope.html">block scope</a>. It is a scoping rule in many programming languages. I’m also often out scoping new lines to climb on the boulders (<a href="https://fr.wikipedia.org/wiki/Bloc_(escalade)">blocs</a> in French).</p>
-<p>When I first started working as a software developer, the team I joined was developing for DOS with Turbo Pascal.</p>
+    <p>I develop software and climb. I would rather climb professionally and code for pleasure. Let me share my experience and advice that run in parallel between these two activities.</p>
+<ul>
+<li>Check your knots and always have a backup.</li>
+<li>Gear freaking is a distraction.</li>
+<li>Muscle memory and good technique will get you there faster.</li>
+<li>Being on the sharp end is more exciting.</li>
+</ul>
+<p>When I first started working as a software developer, the team I joined was developing for DOS with Turbo Pascal on the 80486. The industry was reorientating towards objects and has since become fixated on them. I prefer first class bare functions, algebraic data types and lazy evaluation.</p>
 </article>
 
                     <hr />
@@ -39,29 +53,31 @@
                         <div class="row">
 <div class="col-6">
 <address>
-  <strong>Phil de Joux</strong><br />
-  1425 chemin de la Rivière<br />
-  Val-David<br />
-  Quebec J0T 2N0<br />
-  CANADA<br />
+    <strong>Phil de Joux</strong><br />
+    1425 chemin de la Rivière<br />
+    Val-David<br />
+    Quebec J0T 2N0<br />
+    CANADA<br />
 </address>
-</div> 
+</div>
 <div class="col-6">
-  <address>
-    <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br />
-    <i class="fa fa-phone"></i> +1-450-675-9180<br />
-    <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br />
-  </address>
-  <i class="fa fa-github"></i>
-  <a href="https://github.com/philderbeast" target="_blank">github</a><br />
-  <i style="color:#1da1f2" class="fa fa-twitter"></i>
-  <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br />
-  <i style="color:#0077b5" class="fa fa-linkedin"></i>
-  <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank">linkedin</a><br />
-  <i style="color:#f48024" class="fa fa-stack-overflow"></i>
-  <a href="https://stackoverflow.com/users/story/1503186" target="_blank">stackoverflow</a><br />
-  <img style="position:relative;top=-20px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
-  <a href="https://hackage.haskell.org/user/philderbeast" target="_blank">hackage</a><br />
+    <address>
+        <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br />
+        <i class="fa fa-phone"></i> +1-450-675-9180<br />
+        <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br />
+    </address>
+    <div class="d-print-none">
+        <i class="fa fa-github"></i>
+        <a href="https://github.com/philderbeast" target="_blank">github</a><br />
+        <i style="color:#1da1f2" class="fa fa-twitter"></i>
+        <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br />
+        <i style="color:#0077b5" class="fa fa-linkedin"></i>
+        <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank">linkedin</a><br />
+        <i style="color:#f48024" class="fa fa-stack-overflow"></i>
+        <a href="https://stackoverflow.com/users/story/1503186" target="_blank">stackoverflow</a><br />
+        <img style="position:relative;top=-20px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
+        <a href="https://hackage.haskell.org/user/philderbeast" target="_blank">hackage</a><br />
+    </div>
 </div>
 
                     </footer>
