--- a/tweet/index.html
+++ b/tweet/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Posts tagged "conversion"</title>
-        <link rel="stylesheet" type="text/css" href="../css/styles.css" />
+        <title>Reflected Tweets</title>
+        <link rel="stylesheet" href="../css/styles.css">
         <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
@@ -35,16 +35,18 @@
                 <div class="col-9">
                     <article>
 <header>
-    <h1>Posts tagged "conversion"</h1>
+    <h1>Reflected Tweets</h1>
 </header>
-    <ul>
     
-        <li>
-            <a href="../posts/2013-04-07-video-capture-port.html">How would this look in idiomatic F#?</a> - 2013-04-07
-        </li>
-    
-</ul>
-
+    <p>A small mirror, relfecting a select few twitter interactions.</p>
+<h4 id="daftthunk">#daftthunk</h4>
+<p><a href="https://twitter.com/philderbeast/status/1170053858644697088?ref_src=twsrc%5Etfw">Lyrical programming with daft thunks.</a></p>
+<h4 id="buzzkill">#buzzkill</h4>
+<p><a href="https://twitter.com/philderbeast/status/1156163276012761088?ref_src=twsrc%5Etfw">Completely forgot source safe and threw away the key.</a></p>
+<h4 id="loopcount">#loopcount</h4>
+<p><a href="https://twitter.com/philderbeast/status/1153976541698637824?ref_src=twsrc%5Etfw">The days of imperative programming are numbered. Off by pun slight error.</a></p>
+<h4 id="shipit">#shipit</h4>
+<p><a href="https://twitter.com/philderbeast/status/1101277600159285249?ref_src=twsrc%5Etfw">Minimum enviable product.</a></p>
 </article>
 
                 </div>
