--- a/b/index.html
+++ b/b/index.html
@@ -2,35 +2,43 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>BlockScope - @blockscope</title>
+        <title>About @blockscope</title>
         <link rel="stylesheet" href="../css/styles.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+<link rel="manifest" href="../site.webmanifest">
+<link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
     </head>
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div id="side" class="col-4 card">
+                <div id="side" class="col-3 card">
                     <div class="card-body">
-    <h1 class="card-title"><a href="../">{Block Scope}</a></h1>
-<p class="card-text">with curlies but I prefer indents</p>
+    <h1 class="card-title"><a href="../">{...}</a></h1>
 
     <nav>
         <ul class="nav flex-column">
             <li class="nav-item"><a class="nav-link" href="../archive.html">blog</a></li>
-            <li class="nav-item"><a class="nav-link active" href="../b">@blockscope</a></li>
-            <li class="nav-item"><a class="nav-link active" href="../p">@philderbeast</a></li>
+            <li class="nav-item"><a class="nav-link" href="../tweet">tweet</a></li>
+            <li class="nav-item"><a class="nav-link" href="../p">@philderbeast</a></li>
+            <li class="nav-item"><a class="nav-link" href="../cv">cv</a></li>
+            <li class="nav-item"><a class="nav-link" href="../b">@blockscope</a></li>
         </ul>
     </nav>
 </div>
 
                 </div>
-                <div class="col-6">
+                <div class="col-9">
                     <article>
 <header>
     <h1>@blockscope</h1>
 </header>
     
-    <p>Incorported in 2003 as a New Zealand registered company.</p>
-<p>If you’re interested in working together, these are the kinds of services I can provide.</p>
+    <p>If you’re interested in working together, these are the kinds of services I can provide.</p>
 <ul>
 <li>Getting setup for software development.</li>
 <li>Ensuring quality; testing what works now and discovering new failures.</li>
