Publish cv byline change and github path inclusion.

--- a/cv/index.html
+++ b/cv/index.html
@@ -38,10 +38,8 @@
     <h1>Phil de Joux</h1>
 </header>
     
-    <p>I prefer simple and raw over convoluted and crufty.</p>
-<p>Give me VIM and a REPL over an IDE with wizards any day.<br />
-Leave me a build and tests I can reproduce from the command line any time.</p>
-<h3 id="tech-i-quite-like">Tech I quite like</h3>
+    <p>I am a software engineer, bold in learning but otherwise cautious.</p>
+<h3 id="tech-i-like">Tech I like</h3>
 <p>F# and Haskell as general purpose <strong>programming languages</strong><br />
 SQL, XML, JSON and Dhall for <strong>data</strong><br />
 Paket, Shake, Bazel and Stack for <strong>dependencies and builds</strong><br />
@@ -97,7 +95,7 @@ Maintain the inhouse computer graphics library, improving clipping and multithre
     </address>
     <div class="d-print-none">
         <i class="fa fa-github"></i>
-        <a href="https://github.com/philderbeast" target="_blank">github</a><br />
+        <a href="https://github.com/philderbeast" target="_blank">github/philderbeast</a><br />
         <i style="color:#1da1f2" class="fa fa-twitter"></i>
         <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br />
         <i style="color:#0077b5" class="fa fa-linkedin"></i>
