--- a/b/index.html
+++ b/b/index.html
@@ -67,7 +67,7 @@
     <i class="fa fa-phone"></i> +1-450-675-9180<br />
   </address>
   <i class="fa fa-github"></i>
-  <a href="https://github.com/blockscope" target="_blank">github</a><br />
+  <a href="https://github.com/blockscope" target="_blank">github/blockscope</a><br />
 </div>
 
                     </footer>
