--- a/p/index.html
+++ b/p/index.html
@@ -68,7 +68,7 @@
     </address>
     <div class="d-print-none">
         <i class="fa fa-github"></i>
-        <a href="https://github.com/philderbeast" target="_blank">github</a><br />
+        <a href="https://github.com/philderbeast" target="_blank">github/philderbeast</a><br />
         <i style="color:#1da1f2" class="fa fa-twitter"></i>
         <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br />
         <i style="color:#0077b5" class="fa fa-linkedin"></i>
