--- a/archive.html
+++ b/archive.html
@@ -24,6 +24,7 @@
         <ul class="nav flex-column">
             <li class="nav-item"><a class="nav-link" href="./archive.html">blog</a></li>
             <li class="nav-item"><a class="nav-link" href="./tweet">tweet</a></li>
+            <li class="nav-item"><a class="nav-link" href="./project">projects</a></li>
             <li class="nav-item"><a class="nav-link" href="./p">@philderbeast</a></li>
             <li class="nav-item"><a class="nav-link" href="./cv">cv</a></li>
             <li class="nav-item"><a class="nav-link" href="./b">@blockscope</a></li>
