--- a/archive.html
+++ b/archive.html
@@ -23,11 +23,12 @@
     <nav>
         <ul class="nav flex-column">
             <li class="nav-item"><a class="nav-link" href="./b">@blockscope</a></li>
-            <li class="nav-item"><a class="nav-link" href="./project">projects</a></li>
-            <li class="nav-item"><a class="nav-link" href="./archive.html">posts</a></li>
-            <li class="nav-item"><a class="nav-link" href="./tweet">tweets</a></li>
             <li class="nav-item"><a class="nav-link" href="./p">@philderbeast</a></li>
             <li class="nav-item"><a class="nav-link" href="./cv">worker threads</a></li>
+            <li class="nav-item"><a class="nav-link" href="./project">projects</a></li>
+            <li class="nav-item"><a class="nav-link" href="./contrib">supporting acts</a></li>
+            <li class="nav-item"><a class="nav-link" href="./archive.html">posts</a></li>
+            <li class="nav-item"><a class="nav-link" href="./tweet">tweets</a></li>
         </ul>
     </nav>
 </div>
