--- a/cv/index.html
+++ b/cv/index.html
@@ -271,13 +271,13 @@
 
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="../b">@blockscope</a></li>
             <li class="nav-item"><a class="nav-link" href="../p">@philderbeast</a></li>
+            <li class="nav-item"><a class="nav-link" href="../b">@blockscope</a></li>
             <li class="nav-item"><a class="nav-link" href="../cv">worker threads</a></li>
-            <li class="nav-item"><a class="nav-link" href="../project">projects</a></li>
+            <li class="nav-item"><a class="nav-link" href="../project">labour of love</a></li>
             <li class="nav-item"><a class="nav-link" href="../contrib">supporting acts</a></li>
-            <li class="nav-item"><a class="nav-link" href="../archive.html">posts</a></li>
-            <li class="nav-item"><a class="nav-link" href="../tweet">tweets</a></li>
+            <li class="nav-item"><a class="nav-link" href="../post">post it, notes</a></li>
+            <li class="nav-item"><a class="nav-link" href="../tweet">reflected tweets</a></li>
         </ul>
     </nav>
 </div>
@@ -309,7 +309,7 @@ Develop a website for monitoring on farm measurements for regulated level breach
 <li><span class="tagly">▩</span> <code>2012/07-2012/12</code> <a href="https://angel.co/company/tagly"><strong>Tagly</strong></a><br />
 Develop server and browser components of a live feed.</li>
 <li><span class="apress">▩</span> <code>2012/06-2015/11</code> <a href="https://angel.co/company/tagly"><strong>Apress</strong></a><br />
-Technical review of Expert F#, editions 3 and 4.</li>
+Technical review of Expert F#, editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.</li>
 <li><span class="travieo">▩</span> <code>2011/08-2015/10</code> <a href="http://www.travieo.com"><strong>Travieo</strong></a><br />
 Develop a travel booking website.</li>
 <li><span class="croplogic">▩</span> <code>2008/01-2011/08</code> <a href="http://www.croplogic.com"><strong>CropLogic</strong></a><br />
