--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Projects</title>
+        <title>Labour of Love</title>
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
@@ -22,13 +22,13 @@
 
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="../b">@blockscope</a></li>
             <li class="nav-item"><a class="nav-link" href="../p">@philderbeast</a></li>
+            <li class="nav-item"><a class="nav-link" href="../b">@blockscope</a></li>
             <li class="nav-item"><a class="nav-link" href="../cv">worker threads</a></li>
-            <li class="nav-item"><a class="nav-link" href="../project">projects</a></li>
+            <li class="nav-item"><a class="nav-link" href="../project">labour of love</a></li>
             <li class="nav-item"><a class="nav-link" href="../contrib">supporting acts</a></li>
-            <li class="nav-item"><a class="nav-link" href="../archive.html">posts</a></li>
-            <li class="nav-item"><a class="nav-link" href="../tweet">tweets</a></li>
+            <li class="nav-item"><a class="nav-link" href="../post">post it, notes</a></li>
+            <li class="nav-item"><a class="nav-link" href="../tweet">reflected tweets</a></li>
         </ul>
     </nav>
 </div>
@@ -37,7 +37,7 @@
                 <div class="col-9">
                     <article>
 <header>
-    <h1>Projects</h1>
+    <h1>Labour of Love</h1>
 </header>
     
     <p>My activity on github is nicely summarised by <a href="https://ghuser.io/philderbeast" target="_blank">ghuser.io/philderbeast</a>.</p>
