Deploy padding fix on landing page.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h1 id="phil-de-joux">Phil de Joux</h1>
 <div class="container">
 <div class="row">
-<div class="col-9 align-self-left">
+<div class="col-9 align-self-left" style="padding-left: 0">
 <p>I go by two monikers on the interwebs:</p>
 <ul>
 <li><strong><span class="citation" data-cites="philderbeast">@philderbeast</span></strong> is a nickname given to me by <a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
