Publish changes to philderbeast page.

--- a/p/index.html
+++ b/p/index.html
@@ -40,14 +40,15 @@
     <h1>@philderbeast</h1>
 </header>
     
-    <p>I develop software and climb. I would rather climb professionally and code for pleasure. Let me share my experience and advice that run in parallel between these two activities.</p>
+    <p>I develop software and climb. I would rather climb professionally and code for pleasure. I have some advice that could apply to both activities:</p>
 <ul>
 <li>Check your knots and always have a backup.</li>
 <li>Gear freaking is a distraction.</li>
 <li>Muscle memory and good technique will get you there faster.</li>
 <li>Being on the sharp end is more exciting.</li>
 </ul>
-<p>When I first started working as a software developer, the team I joined was developing for DOS with Turbo Pascal on the 80486. The industry was reorientating towards objects and has since become fixated on them. I prefer first class bare functions, algebraic data types and lazy evaluation.</p>
+<p>When I first started working as a software developer, the team I joined was developing for DOS with Turbo Pascal on the 80486. I’ve learnt a lot since then.</p>
+<p>I’ve disorientated from objects and prefer first class functions, algebraic data types and lazy evaluation.</p>
 </article>
 
                     <hr />
