--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col-9">
                     <h1 id="phil-de-joux">Phil de Joux</h1>
-<div class="container">
+<div class="fluid-container">
 <div class="row">
 <div class="col-9 align-self-left" style="padding-left: 0">
 <p>I go by two monikers on the interwebs:</p>
