Publish fixes for bad links is CV.

--- a/cv/index.html
+++ b/cv/index.html
@@ -308,7 +308,7 @@ Model-View-Update and Reflex-FRP for <strong>application architecture</strong></
 Develop a website for monitoring on farm measurements for regulated level breaches.</li>
 <li><span class="tagly">▩</span> <code>2012/07-2012/12</code> <a href="https://angel.co/company/tagly"><strong>Tagly</strong></a><br />
 Develop server and browser components of a live feed.</li>
-<li><span class="apress">▩</span> <code>2012/06-2015/11</code> <a href="https://angel.co/company/tagly"><strong>Apress</strong></a><br />
+<li><span class="apress">▩</span> <code>2012/06-2015/11</code> <a href="https://www.apress.com"><strong>Apress</strong></a><br />
 Technical review of Expert F#, editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.</li>
 <li><span class="travieo">▩</span> <code>2011/08-2015/10</code> <a href="http://www.travieo.com"><strong>Travieo</strong></a><br />
 Develop a travel booking website.</li>
@@ -316,7 +316,7 @@ Develop a travel booking website.</li>
 Work with scientists tuning and testing a discrete event simulation crop model. Work with the product team developing a website for potato growers. Pull in external weather and field observations. Provide a way for growers to setup their crops, to enter their irrigation and fertilizer applications and to view the model recommended future inputs and expected yields.</li>
 <li><span class="waimak">▩</span> <code>2007/12-2011/04</code> <a href="http://www.waimakariri.govt.nz"><strong>Waimakariri District Council</strong></a><br />
 Develop a website for logging public submissions and scheduling hearing time slots.</li>
-<li><span class="nutricentre">▩</span> <code>2003/07-2008/05</code> <a href="http://www.nutricentre.com"><strong>NutriCentre</strong></a><br />
+<li><span class="nutricentre">▩</span> <code>2003/07-2008/05</code> <a href="https://www.naturalproductsonline.co.uk/news/tesco-closes-loss-making-nutricentre-operation/"><strong>NutriCentre</strong></a><br />
 Develop an online store.</li>
 <li><span class="niwa">▩</span> <code>2003/06-2007/07</code> <a href="http://www.niwa.co.nz"><strong>NIWA</strong></a><br />
 Develop tools and the <a href="http://edenz.niwa.co.nz">EDENZ</a> website for publishing environmental time series data.</li>
