Deploy with webpack 4 and rename to app.sass for styles.

--- a/project/index.html
+++ b/project/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Labour of Love</title>
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/app.css">
         <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
@@ -41,15 +41,18 @@
 </header>
     
     <p>My activity on github is nicely summarised by <a href="https://ghuser.io/philderbeast" target="_blank">ghuser.io/philderbeast</a>.</p>
-<h3 id="flying-high-and-flying-far">Flying High and Flying Far</h3>
-<p>I have but one major project for scoring in the sky and another for saying how that is done.</p>
+<h3 id="flying-high-score">Flying High Score</h3>
+<p>I’ve been a competition pilot, racing other hang glider pilots around unseen turnpoints in the sky. It’s a wild ride.</p>
+<p>With data points coming in every second for upwards of a hundred pilots and geometry on a sphere or ellipsoid, scoring is a complex task. FAI-CIVL govern the sport. They make the rules and provide FS, the offcial program or scoring.</p>
+<p>The paragliding world cup has its own set of rules but these are very close to those of FAI-CIVL. They use another program for scoring, CompCheck.</p>
+<p>I help maintain FS and started flare-timing and CIVL-GAP.</p>
 <ul>
 <li><a href="http://www.flaretiming.com"><strong>flare-timing</strong></a><br />
-A suite of command line apps for scoring hang gliding and paragliding competitions and a website for publishing competitions scored this way with comparisons to the official scores.</li>
+A reference implementation of the rules as a suite of command line apps, one for each step in the process of scoring.</li>
 <li><a href="https://github.com/BlockScope/CIVL-GAP"><strong>CIVL-GAP</strong></a><br />
-A mirror of the FAI-CIVL official scoring rules for hang gliding and paragliding. Marked up in LaTeX and stored in a git repo, this is a place for myself and others to raise questions about the rules, correct obvious mistakes, add clarifying appendices and to suggest changes.</li>
+An upstream version of rules marked up in LaTeX with questions, corrections, clarifying appendices and suggested changes.</li>
 </ul>
-<p>A few of the packages making up flare-timing I’ve released to hackage.</p>
+<p>Packages from flare-timing released on hackage.</p>
 <ul>
 <li><a href="http://hackage.haskell.org/package/siggy-chardust">siggy-chardust</a></li>
 <li><a href="http://hackage.haskell.org/package/detour-via-sci">detour-via-sci</a></li>
