Deploy the fix of some project typos.

--- a/project/index.html
+++ b/project/index.html
@@ -43,8 +43,9 @@
     <p>My activity on github is nicely summarised by <a href="https://ghuser.io/philderbeast" target="_blank">ghuser.io/philderbeast</a>.</p>
 <h3 id="flying-high-score">Flying High Score</h3>
 <p>I’ve been a competition pilot, racing other hang glider pilots around unseen turnpoints in the sky. It’s a wild ride.</p>
-<p>With data points coming in every second for upwards of a hundred pilots and geometry on a sphere or ellipsoid, scoring is a complex task. FAI-CIVL govern the sport. They make the rules and provide FS, the offcial program or scoring.</p>
+<p>With data points coming in every second for upwards of a hundred pilots and geometry on a sphere or ellipsoid, scoring is a complex task. FAI-CIVL govern the sport. They make the rules and provide FS, the official program for scoring.</p>
 <p>The paragliding world cup has its own set of rules but these are very close to those of FAI-CIVL. They use another program for scoring, CompCheck.</p>
+<p>Both FS and CompCheck are closed source. Many of those involved with FS want to make it open source but this has not happened yet.</p>
 <p>I help maintain FS and started flare-timing and CIVL-GAP.</p>
 <ul>
 <li><a href="http://www.flaretiming.com"><strong>flare-timing</strong></a><br />
